<resources>
    <string name="app_name">DialogFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_cancelled">Dialog cancelled!</string>
    <string name="uninstall_confirmed">Uninstall confirmed</string>
    <string name="uninstall_rejected">Uninstall rejected</string>
    <string name="uninstall_ignored">Uninstall ignored</string>
    <string name="dialog_fragment_default">Dialog Fragment (default)</string>
    <string name="dialog_fragment_level_1">Dialog Fragment, level 1</string>
    <string name="dialog_fragment_single_choice">Dialog Fragment (single choice)</string>
    <string name="dialog_fragment_single_choice_with_confirmation">Dialog Fragment (single choice with confirmation)</string>
    <string name="dialog_fragment_multiple_choice">Dialog Fragment (multiple choice)</string>
    <string name="dialog_fragment_multiple_choice_with_confirmation">Dialog Fragment (multiple choice with confirmation)</string>
    <string name="current_volume">CurrentVolume: %1$d%%</string>
    <string name="current_color">Current color:</string>
    <string name="enter_volume">Enter volume</string>
    <string name="dialog_fragment_input_and_validation">Dialog Fragment (input and validation)</string>
    <string name="dialog_fragment_input_and_validation_2">Dialog Fragment (input and validation #2)</string>
    <string name="current_volume_1">Current Volume 1: %1$d%%</string>
    <string name="current_volume_2">Current Volume 2: %1$d%%</string>

    <string-array name="colors">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
</resources>