<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_level1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_fragment_level_1"
        android:fontFamily="casual"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_default"/>

    <Button
        android:id="@+id/button_default"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_fragment_default"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_level1_title" />

    <Button
        android:id="@+id/button_single_choice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_fragment_single_choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_default" />

    <Button
        android:id="@+id/button_single_choice_with_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_fragment_single_choice_with_confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_single_choice" />

    <Button
        android:id="@+id/button_multiple_choice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_fragment_multiple_choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_single_choice_with_confirm" />

    <Button
        android:id="@+id/button_input_and_validation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_fragment_input_and_validation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_multiple_choice" />

    <Button
        android:id="@+id/button_input_and_validation_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_fragment_input_and_validation_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_input_and_validation" />

    <TextView
        android:id="@+id/currentVolumeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_volume"
        android:textSize="18sp"
        android:fontFamily="casual"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/button_input_and_validation_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentVolumeTextView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_color"
            android:textSize="18sp"
            android:fontFamily="casual"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@color/black"
            android:padding="2dp">

            <View
                android:id="@+id/colorView"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="#00FF00"/>

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_current_volume1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_volume_1"
        android:textSize="18sp"
        android:fontFamily="casual"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_current_volume2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_volume_2"
        android:textSize="18sp"
        android:fontFamily="casual"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_current_volume1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>